Fixed bug where time was being synced on start up to existing record